Update leiningen plugins